--- a/notebooks/MT5 Data Validatie Notebook.ipynb
+++ b/notebooks/MT5 Data Validatie Notebook.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "# Add the project path to the system path to enable imports\n",
     "# Adjust this to your project path if needed\n",
-    "project_path = \"..\"\n",
+    "project_path = \"../..\"\n",
     "sys.path.append(project_path)\n",
     "\n",
     "# Import TurtleTrader modules\n",
@@ -114,7 +114,7 @@
     "\n",
     "# Add the project path to the system path to enable imports\n",
     "# Adjust this to your project path if needed\n",
-    "project_path = \"..\"\n",
+    "project_path = \"../..\"\n",
     "sys.path.append(project_path)\n",
     "\n",
     "# Import TurtleTrader modules\n",
