--- a/validation/TurtleTrader_Validation.ipynb
+++ b/validation/TurtleTrader_Validation.ipynb
@@ -28,12 +28,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-01T12:13:24.589857Z",
-     "start_time": "2025-03-01T12:13:24.571581Z"
+     "end_time": "2025-03-01T13:38:06.689902Z",
+     "start_time": "2025-03-01T13:38:06.673947Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "# CODE CEL - 1: Imports en configuratie\n",
     "import sys\n",
     "import os\n",
     "import json\n",
@@ -49,8 +50,10 @@
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "\n",
     "# Add the project path to the system path to enable imports\n",
-    "# Adjust this to your project path if needed\n",
-    "project_path = \"../..\"\n",
+    "# Determine the absolute path to the project root\n",
+    "notebook_dir = os.path.abspath('')\n",
+    "project_path = os.path.abspath(os.path.join(notebook_dir, '..'))\n",
+    "print(f\"Using project path: {project_path}\")\n",
     "sys.path.append(project_path)\n",
     "\n",
     "# Import TurtleTrader modules\n",
@@ -82,17 +85,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Using project path: C:\\Users\\basti\\PycharmProjects\n",
       "✅ TurtleTrader modules successfully imported\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-01T12:13:24.679186Z",
-     "start_time": "2025-03-01T12:13:24.659006Z"
+     "end_time": "2025-03-01T13:38:12.154970Z",
+     "start_time": "2025-03-01T13:38:12.146961Z"
     }
    },
    "cell_type": "code",
@@ -150,7 +154,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -164,19 +168,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-01T12:30:27.474129Z",
-     "start_time": "2025-03-01T12:30:27.142072Z"
+     "end_time": "2025-03-01T13:41:07.610324Z",
+     "start_time": "2025-03-01T13:41:07.599274Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import os\n",
-    "import json\n",
-    "import traceback\n",
-    "from modules.mt5_connector import MT5Connector\n",
-    "import MetaTrader5 as mt5\n",
-    "\n",
-    "# Definieer de functie om config te laden\n",
+    "# CODE CEL - 2: Load configuration\n",
+    "# Load settings from the TurtleTrader config file\n",
     "def load_config(config_path):\n",
     "    \"\"\"Load configuration from JSON file with error handling\"\"\"\n",
     "    try:\n",
@@ -184,64 +183,74 @@
     "            config = json.load(f)\n",
     "        return config\n",
     "    except FileNotFoundError:\n",
-    "        raise FileNotFoundError(f\"Configuration file not found at {config_path}. Please ensure the file exists and the path is correct.\")\n",
+    "        raise FileNotFoundError(f\"Configuration file not found at {config_path}. Please check the path.\")\n",
     "    except json.JSONDecodeError:\n",
     "        raise ValueError(f\"Invalid JSON in configuration file {config_path}. Please check the file format.\")\n",
-    "    except Exception as e:\n",
-    "        raise Exception(f\"Unexpected error loading config: {e}\")\n",
     "\n",
-    "# Stel het pad in (relatief vanuit notebooks/)\n",
-    "project_path = os.path.dirname(os.path.dirname(__file__))  # Ga twee levels omhoog naar projectroot\n",
-    "config_path = os.path.join(project_path, 'config', 'turtle_settings.json')\n",
-    "\n",
-    "# Laad de configuratie\n",
     "try:\n",
+    "    # Use the notebook directory as the project directory since the notebook is already in the project root\n",
+    "    notebook_dir = os.path.abspath('')\n",
+    "    project_dir = notebook_dir  # Don't go up a level, we're already in the project root\n",
+    "\n",
+    "    print(f\"Notebook directory: {notebook_dir}\")\n",
+    "    print(f\"Project directory: {project_dir}\")\n",
+    "\n",
+    "    # Build the path to the configuration file\n",
+    "    config_path = os.path.join(project_dir, 'config', 'turtle_settings.json')\n",
+    "    print(f\"Looking for configuration at: {config_path}\")\n",
+    "\n",
+    "    # Check if the file exists\n",
+    "    if not os.path.exists(config_path):\n",
+    "        print(f\"⚠️ Configuration file not found at the expected location.\")\n",
+    "        print(f\"Let's check the directory structure:\")\n",
+    "\n",
+    "        # List directories to help debugging\n",
+    "        project_contents = os.listdir(project_dir)\n",
+    "        print(f\"Contents of {project_dir}:\")\n",
+    "        for item in project_contents:\n",
+    "            if os.path.isdir(os.path.join(project_dir, item)):\n",
+    "                print(f\"  📁 {item}/\")\n",
+    "            else:\n",
+    "                print(f\"  📄 {item}\")\n",
+    "\n",
+    "    # Load the configuration\n",
     "    config = load_config(config_path)\n",
-    "    print(\"✅ Configuration loaded successfully:\")\n",
-    "    print(f\"Server: {config['mt5']['server']}\")\n",
-    "    print(f\"Login: {config['mt5']['login']}\")\n",
+    "\n",
+    "    print(\"TurtleTrader Configuration:\")\n",
+    "    print(f\"Broker: {config['mt5']['server']}\")\n",
     "    print(f\"Symbols: {config['mt5']['symbols']}\")\n",
+    "    print(f\"Risk per trade: {config['mt5']['risk_per_trade'] * 100}%\")\n",
+    "    if 'symbol_mapping' in config['mt5']:\n",
+    "        print(f\"Symbol mapping: {config['mt5']['symbol_mapping']}\")\n",
     "except Exception as e:\n",
-    "    print(f\"❌ Error loading config: {e}\")\n",
-    "    raise\n",
-    "\n",
-    "# Probeer verbinding te maken met MT5\n",
-    "try:\n",
-    "    # Initialize connector met de mt5-configuratie\n",
-    "    connector = MT5Connector(config['mt5'])\n",
-    "    connected = connector.connect()\n",
-    "\n",
-    "    if connected:\n",
-    "        print(\"✅ MT5 connection successful!\")\n",
-    "        account_info = connector.get_account_info()\n",
-    "        print(f\"Account balance: {account_info['balance']}\")\n",
-    "        print(f\"Account equity: {account_info['equity']}\")\n",
-    "        print(f\"Connected to server: {mt5.account_info().server}\")\n",
-    "    else:\n",
-    "        print(\"❌ Failed to connect to MT5. Check credentials and server.\")\n",
-    "except Exception as e:\n",
-    "    def display_error(e):\n",
-    "        \"\"\"Display detailed error information\"\"\"\n",
-    "        print(f\"\\n❌ ERROR: {type(e).__name__}: {e}\")\n",
-    "        traceback.print_exc()\n",
-    "        print(\"\\nPlease check the error details above and fix the issue before continuing.\")\n",
     "    display_error(e)"
    ],
    "id": "fad281708bd1b3d2",
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name '__file__' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[9]\u001B[39m\u001B[32m, line 22\u001B[39m\n\u001B[32m     19\u001B[39m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mUnexpected error loading config: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00me\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n\u001B[32m     21\u001B[39m \u001B[38;5;66;03m# Stel het pad in (relatief vanuit notebooks/)\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m22\u001B[39m project_path = os.path.dirname(os.path.dirname(\u001B[34;43m__file__\u001B[39;49m))  \u001B[38;5;66;03m# Ga twee levels omhoog naar projectroot\u001B[39;00m\n\u001B[32m     23\u001B[39m config_path = os.path.join(project_path, \u001B[33m'\u001B[39m\u001B[33mconfig\u001B[39m\u001B[33m'\u001B[39m, \u001B[33m'\u001B[39m\u001B[33mturtle_settings.json\u001B[39m\u001B[33m'\u001B[39m)\n\u001B[32m     25\u001B[39m \u001B[38;5;66;03m# Laad de configuratie\u001B[39;00m\n",
-      "\u001B[31mNameError\u001B[39m: name '__file__' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Notebook directory: C:\\Users\\basti\\PycharmProjects\\TurtleTrader\n",
+      "Project directory: C:\\Users\\basti\\PycharmProjects\\TurtleTrader\n",
+      "Looking for configuration at: C:\\Users\\basti\\PycharmProjects\\TurtleTrader\\config\\turtle_settings.json\n",
+      "TurtleTrader Configuration:\n",
+      "Broker: FTMO-Demo2\n",
+      "Symbols: ['EURUSD', 'XAUUSD', 'US30']\n",
+      "Risk per trade: 1.0%\n",
+      "Symbol mapping: {'US30': 'US30.cash'}\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "aa15b2d30f33da20",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
