--- a/validation/TurtleTrader_Validation.ipynb
+++ b/validation/TurtleTrader_Validation.ipynb
@@ -28,12 +28,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.dates as mdates\n",
     "import seaborn as sns\n",
     "from scipy import stats\n",
     "import MetaTrader5 as mt5\n",
-    "from sklearn.model_selection import TimeSeriesSplit\n",
-    "from IPython.display import display, HTML, clear_output\n",
+    "from IPython.display import display\n",
     "import warnings\n",
     "\n",
     "# Onderdruk waarschuwingen\n",
@@ -65,7 +63,7 @@
     "try:\n",
     "    # Importeer core modules\n",
     "    from modules.mt5_connector import MT5Connector\n",
-    "    from modules.strategy import TurtleStrategy\n",
+    "    from modules.strategies.turtle_strategy import TurtleStrategy\n",
     "    from modules.risk_manager import RiskManager\n",
     "    from modules.backtester import Backtester\n",
     "    from utils.logger import Logger\n",
