--- a/validation/TurtleTrader_Validation.ipynb
+++ b/validation/TurtleTrader_Validation.ipynb
@@ -120,7 +120,7 @@
     "\n",
     "try:\n",
     "    # Configuratie laden\n",
-    "    config_path = os.path.join(project_path, 'config', 'turtle_settings.json')\n",
+    "    config_path = os.path.join(project_path, 'config', 'config.json')\n",
     "    print(f\"Configuratie zoeken op: {config_path}\")\n",
     "\n",
     "    # Controleer of het bestand bestaat\n",
