--- a/validation/TurtleTrader_Validation.ipynb
+++ b/validation/TurtleTrader_Validation.ipynb
@@ -60,9 +60,9 @@
     "try:\n",
     "    # Importeer core modules\n",
     "    from modules.mt5_connector import MT5Connector\n",
-    "    from modules.strategies.turtle_strategy import TurtleStrategy\n",
+    "    from modules.startegy.turtle import TurtleStrategy\n",
     "    from modules.risk_manager import RiskManager\n",
-    "    from modules.backtester import Backtester\n",
+    "    from analysis.backtester import Backtester\n",
     "    from utils.logger import Logger\n",
     "    from utils.visualizer import Visualizer\n",
     "    print(\"✅ TurtleTrader modules succesvol geïmporteerd\")\n",
