--- a/validation/TurtleTrader_Validation.ipynb
+++ b/validation/TurtleTrader_Validation.ipynb
@@ -60,7 +60,7 @@
     "try:\n",
     "    # Importeer core modules\n",
     "    from modules.mt5_connector import MT5Connector\n",
-    "    from modules.startegy.turtle import TurtleStrategy\n",
+    "    from modules.strategy.turtle import TurtleStrategy\n",
     "    from modules.risk_manager import RiskManager\n",
     "    from analysis.backtester import Backtester\n",
     "    from utils.logger import Logger\n",
@@ -120,7 +120,7 @@
     "\n",
     "try:\n",
     "    # Configuratie laden\n",
-    "    config_path = os.path.join(project_path, 'config', 'config.json')\n",
+    "    config_path = os.path.join(project_path, 'config', 'settings.json')\n",
     "    print(f\"Configuratie zoeken op: {config_path}\")\n",
     "\n",
     "    # Controleer of het bestand bestaat\n",
